--- a/UC_1_Veiw_Itinerary/result1/Iteration1/t4f1f1.html
+++ b/UC_1_Veiw_Itinerary/result1/Iteration1/t4f1f1.html
@@ -19,10 +19,10 @@
   <TD width="5%" rowspan="2" align="left" valign="top">
 <b>
 <label><input type="checkbox" name="1" value="on" /></label></font></b>
-<input type="hidden" name="flightID" value="0-7-JB"  />
+<input type="hidden" name="flightID" value="292370767-824-JB"  />
   </TD>
   <TD width="45%" valign="top">
-      <b>&nbsp;&nbsp;A Coach class ticket for :</b><br/>
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
       <center><table border="0" width="85%"><tr><td>
       <li><i>Jojo Bean
       <li><i></i>
@@ -34,10 +34,10 @@
       <Table width="80%" cellspacing="0" > <tr> <td>
           Jojo Bean
 <br/>
+          Moscow<br/>
+          123456<br/>
           <br/>
-          <br/>
-          <br/>
-          Total Charge: $ 0 <BR/> (CC: x-)
+          Total Charge: $ 723 <BR/> (CC: x-7894)
       </td> </tr> </table>
       </center>
   </TD>
@@ -45,8 +45,8 @@
 <TR bgcolor="#EFF2F7">
   <TD COLSPAN="3">
   <b>Flight Details:</b><BR/>  <center>
-  09/20/2020
- :  8am : Flight 000 leaves Denver  for Denver.<br>  </center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
   </TD>
 </TR>
 
@@ -61,7 +61,7 @@
   <TD width="5%" rowspan="2" align="left" valign="top">
 <b>
 <label><input type="checkbox" name="2" value="on" /></label></font></b>
-<input type="hidden" name="flightID" value="292370-15-JB"  />
+<input type="hidden" name="flightID" value="292370767-1594-JB"  />
   </TD>
   <TD width="45%" valign="top">
       <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
@@ -79,7 +79,7 @@
           Moscow<br/>
           123456<br/>
           <br/>
-          Total Charge: $ 0 <BR/> (CC: x-7894)
+          Total Charge: $ 723 <BR/> (CC: x-7894)
       </td> </tr> </table>
       </center>
   </TD>
@@ -87,8 +87,8 @@
 <TR bgcolor="#EFF2F7">
   <TD COLSPAN="3">
   <b>Flight Details:</b><BR/>  <center>
-  09/19/2020
- :  8am : Flight 00 leaves Denver  for Denver.<br>  </center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
   </TD>
 </TR>
 
@@ -103,7 +103,7 @@
   <TD width="5%" rowspan="2" align="left" valign="top">
 <b>
 <label><input type="checkbox" name="3" value="on" /></label></font></b>
-<input type="hidden" name="flightID" value="292370-23-JB"  />
+<input type="hidden" name="flightID" value="292370767-2363-JB"  />
   </TD>
   <TD width="45%" valign="top">
       <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
@@ -121,7 +121,7 @@
           Moscow<br/>
           123456<br/>
           <br/>
-          Total Charge: $ 0 <BR/> (CC: x-7894)
+          Total Charge: $ 723 <BR/> (CC: x-7894)
       </td> </tr> </table>
       </center>
   </TD>
@@ -129,8 +129,8 @@
 <TR bgcolor="#EFF2F7">
   <TD COLSPAN="3">
   <b>Flight Details:</b><BR/>  <center>
-  09/19/2020
- :  8am : Flight 00 leaves Denver  for Denver.<br>  </center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
   </TD>
 </TR>
 
@@ -171,7 +171,343 @@
 <TR bgcolor="#EFF2F7">
   <TD COLSPAN="3">
   <b>Flight Details:</b><BR/>  <center>
-  09/19/2020
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="5" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-3901-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="6" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-4671-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="7" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-5440-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="8" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-6209-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="9" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-6978-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="10" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-7747-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="11" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-8517-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
+ :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
+  </TD>
+</TR>
+
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="4">
+  <hr/>
+  </TD>
+</TR>
+
+<!-- Flight #1 -->
+<TR bgcolor="#EFF2F7">
+  <TD width="5%" rowspan="2" align="left" valign="top">
+<b>
+<label><input type="checkbox" name="12" value="on" /></label></font></b>
+<input type="hidden" name="flightID" value="292370767-9286-JB"  />
+  </TD>
+  <TD width="45%" valign="top">
+      <b>&nbsp;&nbsp;A First class ticket for :</b><br/>
+      <center><table border="0" width="85%"><tr><td>
+      <li><i>Jojo Bean
+      <li><i></i>
+      </td></tr></table></center>
+  </TD>
+  <TD width="5%" >.<br/>.<br/>.<br/>.</TD>
+  <TD width="45%" valign=top><b>Invoice sent to:</b><br/>
+      <center>
+      <Table width="80%" cellspacing="0" > <tr> <td>
+          Jojo Bean
+<br/>
+          Moscow<br/>
+          123456<br/>
+          <br/>
+          Total Charge: $ 723 <BR/> (CC: x-7894)
+      </td> </tr> </table>
+      </center>
+  </TD>
+</TR>
+<TR bgcolor="#EFF2F7">
+  <TD COLSPAN="3">
+  <b>Flight Details:</b><BR/>  <center>
+  09/21/2020
  :  8am : Flight 010 leaves Denver  for Frankfurt.<br>  </center>
   </TD>
 </TR>
@@ -183,7 +519,7 @@
 </TR>
 <TR>
    <TD align="center" COLSPAN="4">
-   <b>A total of 4 scheduled flights.</font></b>
+   <b>A total of 12 scheduled flights.</font></b>
    </TD>
 </TR>
 </TABLE>
@@ -196,7 +532,7 @@
 <input type="image" name="removeAllFlights" src="/WebTours/images/cancelallreservations.gif" border="0" /></TD>
 </TABLE>
 
-<div><input type="hidden" name=".cgifields" value="4"  /><input type="hidden" name=".cgifields" value="1"  /><input type="hidden" name=".cgifields" value="3"  /><input type="hidden" name=".cgifields" value="2"  /></div></form>
+<div><input type="hidden" name=".cgifields" value="6"  /><input type="hidden" name=".cgifields" value="11"  /><input type="hidden" name=".cgifields" value="3"  /><input type="hidden" name=".cgifields" value="7"  /><input type="hidden" name=".cgifields" value="9"  /><input type="hidden" name=".cgifields" value="12"  /><input type="hidden" name=".cgifields" value="2"  /><input type="hidden" name=".cgifields" value="8"  /><input type="hidden" name=".cgifields" value="1"  /><input type="hidden" name=".cgifields" value="4"  /><input type="hidden" name=".cgifields" value="10"  /><input type="hidden" name=".cgifields" value="5"  /></div></form>
 
 </center>
 
